@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Localize anonymous in context interface [#15153]
 - Fix drop animation appearing at the wrong position for dragged elements [#15111]
 - Resize static fields on statick checkbox toggle [#15100]
 - Change xtype to textarea for description in grids [#15126]
